feat: filter beginning yay

--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -13,13 +13,14 @@
     <link rel="stylesheet" href="../../styles/button.css">
     <link rel="stylesheet" href="../../styles/footer.css">
 
+    <link rel="icon" href="../../assets/img/icons/games.png">
 
 
     <link rel="stylesheet" href="./styles/card.css">
 
     <script src="./scripts/controller.js" type="module" defer></script>
 
-    <title>Menu Inicial</title>
+    <title>Carrinho</title>
 </head>
 <body>
     <header>
