--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../../styles/button.css">
     <link rel="stylesheet" href="../../styles/footer.css">
 
-
+    <link rel="icon" href="../../assets/img/icons/games.png">
 
     <link rel="stylesheet" href="./styles/card.css">
 
@@ -32,8 +32,14 @@
         </nav>
     </header>
     <main>
-        <ul id="games">
-        </ul>
+        <form>
+            <input type="text">
+            <input type="checkbox" id="gameTag">
+            <label for="gameTag"></label>
+            <input type="range" id="gamePrice">
+            <label for="gamePrice"></label>
+        </form>
+        <ul id="games"></ul>
     </main>
     <footer>
     <link rel="stylesheet" href="../../styles/button.css">
