feat: filter tag rendering

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main>
-        <form>
+        <form id="filter">
             <input type="text">
             <input type="checkbox" id="gameTag">
             <label for="gameTag"></label>
