feat: FILTER THAT WORKS YEAH BOOOOIIII

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -32,13 +32,13 @@
         </nav>
     </header>
     <main>
-        <form id="filter">
+        <div id="filter">
             <input type="text">
             <input type="checkbox" id="gameTag">
             <label for="gameTag"></label>
             <input type="range" id="gamePrice">
             <label for="gamePrice"></label>
-        </form>
+        </div>
         <ul id="games"></ul>
     </main>
     <footer>
