--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -33,10 +33,8 @@
     </header>
     <main>
         <div id="filter">
-            <input type="text">
-            <input type="checkbox" id="gameTag">
-            <label for="gameTag"></label>
-            <input type="range" id="gamePrice">
+            <input type="text" id="gameSearch" class="filterTag">
+            <input type="range" id="gamePrice" class="filterTag" min="20" max="300">
             <label for="gamePrice"></label>
         </div>
         <ul id="games"></ul>
