--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -36,9 +36,9 @@
     <main>
         <div id="filter">
             <div id="inputFilter">
-                <input type="text" id="gameSearch" class="filterTag">
-                <input type="range" id="gamePrice" class="filterTag" min="20" max="200">
-                <label for="gamePrice"></label>
+                <input type="text" id="gameSearch" placeholder="Type Here...">
+                <input type="range" id="gamePrice" min="20" max="200">
+                <!-- <label for="gamePrice"></label> -->
             </div>
         </div>
         <ul id="games"></ul>
