feat: footer links

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -40,12 +40,18 @@
                 <input type="range" id="gamePrice" min="20" max="200">
                 <!-- <label for="gamePrice"></label> -->
             </div>
+            <hr>
         </div>
         <ul id="games"></ul>
     </main>
     <footer>
-    <link rel="stylesheet" href="../../styles/button.css">
+        <link rel="stylesheet" href="../../styles/button.css">
         <p>© No rights reserved, this is just a study! :)</p>
+        <ul>
+            <li><a href="https://github.com/akauzinha47" target="_blank"><img src="../../assets/img/icons/github.png" alt="" class="footer-icons"></a></li>
+            <li></li>
+        </ul>
+        <!-- <div> Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect"> Pixel perfect </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com'</a></div> -->
     </footer>
 </body>
 </html>
