fix: filter event catching

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -36,8 +36,8 @@
     <main>
         <div id="filter">
             <div id="inputFilter">
-                <input type="text" id="gameSearch" placeholder="Type Here...">
-                <input type="range" id="gamePrice" min="20" max="200">
+                <input type="text" id="gameSearch" placeholder="Type Here..." class="filter-input">
+                <input type="range" id="gamePrice" min="0" max="200" class="filter-input">
                 <!-- <label for="gamePrice"></label> -->
             </div>
             <hr>
